refactor: cache proxy server

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "author": "mr.tolstoy@protonmail.ch",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@cloudflare/workers-types": "^2.0.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/node": "^14.14.41",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
     "prettier": "^2.0.5",
@@ -23,9 +24,7 @@
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "dependencies": {
-    "global": "^4.4.0"
+    "webpack-cli": "^3.3.12",
+    "dotenv-webpack": "^7.0.2"
   }
 }
